--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
                         <a href="#leader" class="nav-link">LEADERSHIP</a>
                     </li>
                     <li class="nav-item">
-                        <a data-toggle="modal" data-target="#give" style="color: red; font-weight: bolder;"  class="nav-link">GIVE</a>
+                        <a href="#" style="color: red; font-weight: bolder;"  class="nav-link"onclick="give()">GIVE</a>
                     </li>
                     <div id="give" class="modal">
                         <div class="modal-dialog">
