--- a/home.html
+++ b/home.html
@@ -82,9 +82,9 @@
 
     <section id="third">
         <div class="container" id="#about">
-            <h2><i>Your long awaited Miracle, Deliverance and Healing is finally here.
+            <h4><i>Your long awaited Miracle, Deliverance and Healing is finally here.
                 Experience Success and Breakthrough in Delighted Word Church aka Lighthouse -one of the fastest growing churches in Rivers State and globally. Be a part of us as we lighten your world with the WORD.  
-            </i></h2>
+            </i></h4>
             <div class="row" style="background-color: greenyellow" >
                 <div class="col-md-12">
                     <h1><b><i style="text-transform: uppercase"> Mission Statement</i></b></h1>
@@ -116,7 +116,7 @@
             <b>
             <p style="color: red;">SUCCESSFUL LIVING SERVICE</p>8AM EVERY SUNDAY <br><br><br>
             <p style="color: orange;">CELEBRATION SERVICE</p>9:30AM EVERY SUNDAY <br><br><br>
-            <p style="color: yellow;">LIVING INSIGHT SERVICE</p>6PM EVERY WEDNESDAY <br><br><br>
+            <p style="color: pink;">LIVING INSIGHT SERVICE</p>6PM EVERY WEDNESDAY <br><br><br>
             <p style="color: green;">ARISE & SHINE</p>7AM 1ST SATURDAY EVERY MONTH <br><br><br>
             <p style="color: blue">MORNING DEW</p>6AM 1ST DAY EVERY MONTH <br><br><br>
             <p style="color: indigo">WORKERS PRAYER</p>6PM 1ST MONDAY EVERY MONTH <br><br><br>
